--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   },
   "dependencies": {
     "react-redux": "^5.0.6",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.7.2"
   }
 }
