--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Sample react front-end with User/Films APIs",
   "scripts": {
+    "dev": "webpack --watch --progress --color --config ./webpack.dev.js",
     "build": "webpack --watch --progress --color"
   },
   "keywords": [
@@ -29,11 +30,14 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "es6-promise": "^4.2.4",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
     "redux-observable": "^0.17.0",
-    "rxjs": "^5.5.6"
+    "rxjs": "^5.5.6",
+    "webpack-merge": "^4.1.1"
   }
 }
