--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
+    "redux-form": "^7.2.1",
     "redux-observable": "^0.17.0",
     "rxjs": "^5.5.6",
     "webpack-merge": "^4.1.1"
