--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "axios": "^0.17.1",
     "es6-promise": "^4.2.4",
+    "react-rating": "^1.0.4",
     "react-redux": "^5.0.6",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.8",
